syntax = "proto3";
package pb;
option go_package = "internal/pb";

message Blank {}

message Category {
    string id = 1;
    string name = 2;
    string description = 3;
}

message CreateCategoryRequest {
    string name = 1;
    string description = 2;
}

message CreateCategoryResponse {
    Category category = 1;
}

message CategoryListResponse {
    repeated Category categories = 1;
}

message CategoryGetRequest {
    string id = 1;
}

service CategoryService {
    rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse) {}
    rpc ListCategories(Blank) returns (CategoryListResponse) {}
    rpc GetCategory(CategoryGetRequest) returns (Category) {}
    rpc CreateCategoryStream(stream CreateCategoryRequest) returns (CategoryListResponse) {}
    rpc CreateCategoryStreamBidirectional(stream CreateCategoryRequest) returns (stream Category) {}
}
